Fixed styling of add back button so the text above it cannot run behind it.

--- a/core/app/assets/stylesheets/base/topbar/notifications.css.less
+++ b/core/app/assets/stylesheets/base/topbar/notifications.css.less
@@ -115,6 +115,10 @@
           background-color: @itemHoverColor;
         }
       }
+
+      &.activity-subchannel .info {
+        margin-bottom: 5px;
+      }
     }
   }
 }
